[package]
name = "jlu-drcom-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.40"
md5 = "0.7.0"
rand = "0.8.5"
serde_json = "1.0.96"
log = "0.4.18"
simple_logger = "4.1.0"
num-bigint = "0.4.3"
