[package]
name = "jlu-drcom-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.18"
simple_logger = "4.1.0"

thiserror = "1.0.40"
lazy_static = "1.4.0"

md5 = "0.7.0"
rand = "0.8.5"
hostname = "0.3"
